fix: [PL-20360]: Using Card and left alignments standardisation in connector details page (#5669)
* fix: [PL-20360]: Using Card and left allignments standardization in connector details page

* fix: [PL-20360]: CSS clean up

--- a/src/modules/35-connectors/pages/connectors/views/savedDetailsView/SavedConnectorDetails.module.scss
+++ b/src/modules/35-connectors/pages/connectors/views/savedDetailsView/SavedConnectorDetails.module.scss
@@ -9,10 +9,6 @@
     height: fit-content;
     width: 45%;
     min-width: 240px;
-    margin-right: 3% !important;
-    padding: 20px 16px 15px !important;
-    box-shadow: 0 0 4px rgba(96, 97, 112, 0.2);
-    border-radius: 4px;
 
     .detailsSectionRowWrapper {
       &:not(:last-child) {
